[Build] Use cucumber-parent pom